--- a/data/slide1.css
+++ b/data/slide1.css
@@ -1,1 +1,1 @@
-#spr1_32db7e2c {clip:rect(0px,1280px,720px,0px);}#txt0_32db7e2c,#txt1_32db7e2c,#txt2_32db7e2c,#txt3_32db7e2c {font-family:fnt4; font-size:58.667px; line-height:83px; color:#002060;}#txt4_32db7e2c {font-family:fnt5; font-size:37.333px; line-height:54px; font-weight:bold; color:#0070c0;}
+#spr1_225c1d4c {clip:rect(0px,1280px,720px,0px);}#txt0_225c1d4c,#txt1_225c1d4c,#txt2_225c1d4c,#txt3_225c1d4c {font-family:fnt4; font-size:58.667px; line-height:83px; color:#181717;}#txt4_225c1d4c {font-family:fnt5; font-size:37.333px; line-height:54px; font-weight:bold; color:#7f7f7f;}
